--- a/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_AccountSelectTemplate.cshtml
@@ -3,7 +3,7 @@
         <option data-bind="value: id, text: text, attr: { title: title }"></option>
     </select>
     <span class="ui-state-default ui-corner-all ui-state-hover" style="margin:0 0.1em 0; padding-top: .4em; vertical-align: sub;">
-    <a href="#" class="search-account ui-icon ui-icon-search"></a></span>
+    <a href="#" title="Search Accounts" class="search-account ui-icon ui-icon-search"></a></span>
     <select data-bind="enable: $root.shouldEnableSubAccounts(subAccounts), value: subAccount, splitName: 'SubAccount', options: subAccounts, optionsCaption: '--Sub Account--'" name="SubAccount" class="account-subaccount"></select>
     <input data-bind="value: project, splitName: 'Project'" type="text" placeholder="Proj" class="account-projectcode" maxlength="4"/>
 </div>
