--- a/Purchasing.Web/Views/Order/_OrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderDetails.cshtml
@@ -11,10 +11,10 @@
         
         <div class="section-text">
             <p>
-                Select the proper accounting/routing information.  Select an account if it is known, otherwise select the approver and account manager the order request should be routed.
+                Select the proper accounting/routing information. Select an <strong>account</strong> if it is known, otherwise select the <strong>approver and account manager</strong> the order request should be routed to.
             </p>
             <p>
-                If this purchasing request needs to be split across multiple accounts you also have the option to 'Split Order Request' and 'Split By Line'.
+                If this purchasing request needs to be <strong>split across multiple accounts</strong> you also have the option to <strong>'Split Order Request'</strong> (below) and <strong>'Split By Line'</strong> (above).
             </p>    
         </div>
         <div id="details-select">
@@ -31,7 +31,7 @@
                 }
                 
                     <a class="details-option"><input data-bind="click: splitByOrder" type="radio" name="orderdetails" value="split" id="split" />
-                    <label for="split" class="editor-label">Split Order</label></a>
+                    <label for="split" class="editor-label">Split Order Request</label></a>
 
             <div class="details-content">
             
