make drop down find within instead of whole words

--- a/Purchasing.Web/Views/Workgroup/Edit.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Edit.cshtml
@@ -41,7 +41,7 @@
     
     <script type="text/javascript">
         $(document).ready(function () {
-            $(".chzn-select").chosen({ no_results_text: "No results matched" });
+            $(".chzn-select").chosen({ no_results_text: "No results matched", search_contains: true });
         });
     </script>
 }
