--- a/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
+++ b/Purchasing.Web/Views/Wizard/CreateWorkgroup.cshtml
@@ -18,7 +18,7 @@
 @section AdditionalScripts{
     <script type="text/javascript">
         $(document).ready(function() {
-            $(".chzn-select").chosen({ no_results_text: "No results matched" });
+            $(".chzn-select").chosen({ no_results_text: "No results matched", search_contains: true });
         });
     </script>
 }
