url is now passed to a new vendor

--- a/Purchasing.Web/Views/Order/_VendorDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_VendorDialog.cshtml
@@ -85,7 +85,14 @@
                         Email: @*<span class="required">*</span>*@</div>
                     <div class="editor-field">
                         <input id="vendor-email" type="text" placeholder="Vendor Email" maxlength="50"/></div>
-                        <span class="field-validation-valid" data-valmsg-for="vendorEmail" data-valmsg-replace="true"></span>
+                    <span class="field-validation-valid" data-valmsg-for="vendorEmail" data-valmsg-replace="true"></span>
+                </li>
+                <li>
+                    <div class="editor-label">
+                        Url: @*<span class="required">*</span>*@</div>
+                    <div class="editor-field">
+                        <input id="vendor-url" type="text" placeholder="Vendor Url" maxlength="128"/></div>
+                        <span class="field-validation-valid" data-valmsg-for="vendorUrl" data-valmsg-replace="true"></span>
                 </li>
             </ul>
         </section>
