ordersave guid, generated on page load, and saves that now.  along with workgroup id.

--- a/Purchasing.Web/Views/Order/Request.cshtml
+++ b/Purchasing.Web/Views/Order/Request.cshtml
@@ -29,7 +29,7 @@
 }
 
 <input type="button" class="button" value="Save" id="save-btn"/>
-<span id="saveId"></span>
+<span id="saveId" data-save-id="@Guid.NewGuid().ToString()"></span>
 
 @Html.Partial("_SideNavigation")
 
