--- a/Purchasing.Web/Views/Workgroup/Details.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Details.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = Model.Workgroup.Name;
 }
 
-@helper ContainerFor(string name, int count, string action = null, string roleFilter = null, bool special = false, string label = null){
+@helper ContainerFor(string name, int count, string action = null, string roleFilter = null, bool special = false, string label = null, bool disable = false){
     if (special)
     {
           <a href="@Url.Action("ByWorkgroup", "ConditionalApproval", new { id = Model.Workgroup.Id }, null)">
@@ -27,21 +27,41 @@
     }
     else
     {
-        <a href="@Url.Action(action ?? name, "Workgroup", new { id = Model.Workgroup.Id, roleFilter = roleFilter })">
+        if (disable)
+        {
 
-            <div class="workgroup-info gradientbackground ui-corner-all box-shadow @(count == 0 ? "box-red-innershadow" : string.Empty)">
+                <div title="Administrative workgroups do not allow @(!string.IsNullOrWhiteSpace(label) ? label : name) to be added." class=" disable workgroup-info gradientbackground ui-corner-all box-shadow @(count == 0 ? "box-red-innershadow" : string.Empty)">
         
-                <ul>
+                    <ul>
         
-                    <li class="prop-name ui-corner-all border-all blue-gradientbackground">@(!string.IsNullOrWhiteSpace(label) ? label : name)</li>
+                        <li class="prop-name ui-corner-all border-all blue-gradientbackground">@(!string.IsNullOrWhiteSpace(label) ? label : name)</li>
 
-                    <li class="prop-value">@count
-                    </li>
+                        <li class="prop-value">@count
+                        </li>
 
-                </ul>
+                    </ul>
         
-            </div>
-        </a>
+                </div>
+
+        }
+        else
+        {
+            <a href="@Url.Action(action ?? name, "Workgroup", new {id = Model.Workgroup.Id, roleFilter = roleFilter})">
+                <div class="workgroup-info gradientbackground ui-corner-all box-shadow @(count == 0 ? "box-red-innershadow" : string.Empty)">
+        
+                    <ul>
+        
+                        <li class="prop-name ui-corner-all border-all blue-gradientbackground">@(!string.IsNullOrWhiteSpace(label) ? label : name)</li>
+
+                        <li class="prop-value">@count
+                        </li>
+
+                    </ul>
+        
+                </div>
+            </a>
+        }
+
     }
 }
 
@@ -54,7 +74,9 @@
 }
 
 @section AdditionalScripts{
-    
+    <script src="@Url.Script("jquery.qtip.min.js")"></script>
+    <link href="@Url.Css("jquery.qtip.min.css")" rel="stylesheet" type="text/css" />
+
     <style>
         div.workgroup-info
         {
@@ -68,9 +90,9 @@
         div.workgroup-info:last-child {}
         div.workgroup-info:hover
         {
-           -moz-box-shadow:inset 0 0 10px lightblue;
-           -webkit-box-shadow:inset 0 0 10px lightblue;
-           box-shadow:inset 0 0 10px lightblue;
+            -moz-box-shadow:inset 0 0 10px lightblue;
+            -webkit-box-shadow:inset 0 0 10px lightblue;
+            box-shadow:inset 0 0 10px lightblue;
         }
         div.workgroup-info ul
         {
@@ -93,6 +115,26 @@
 
         }
     </style>
+    
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".showTip").qtip({
+                overwrite: false,
+                show: {
+                    event: 'mouseenter focus',
+                    ready: false
+                },
+                hide: {
+                    event: 'mouseleave blur'
+                },
+                position: {
+                    my: 'bottom center',
+                    at: 'top center'
+                }
+            });
+        });
+
+    </script>
 }
 
 
@@ -139,9 +181,9 @@
                 accountLabel = "Synchronized Accounts";
             }
         }
-        @ContainerFor("Accounts", Model.AccountCount, label: accountLabel)
-        @ContainerFor("Vendors", Model.VendorCount, "VendorList")
-        @ContainerFor("Addresses", Model.AddressCount)
+        @ContainerFor("Accounts", Model.AccountCount, label: accountLabel, disable: Model.Workgroup.Administrative ? true : false)
+        @ContainerFor("Vendors", Model.VendorCount, "VendorList", disable: Model.Workgroup.Administrative ? true : false)
+        @ContainerFor("Addresses", Model.AddressCount, disable: Model.Workgroup.Administrative ? true : false)
         @ContainerFor("Conditional Approvals", Model.WorkgroupConditionalApprovalCount, null, null, true)
         <div style="clear: both;"></div>
 
@@ -155,7 +197,7 @@
 
     <div class="section-contents">
     
-        @ContainerFor("Requesters", Model.UserCount, "People", Role.Codes.Requester)
+        @ContainerFor("Requesters", Model.UserCount, "People", Role.Codes.Requester, disable: Model.Workgroup.Administrative ? true : false)
         @ContainerFor("Approvers", Model.ApproverCount, "People", Role.Codes.Approver)
         @ContainerFor("Account Managers", Model.AccountManagerCount, "People", Role.Codes.AccountManager)
         @ContainerFor("Purchasers", Model.PurchaserCount, "People", Role.Codes.Purchaser)
