wip users in workgroup

--- a/Purchasing.Web/Views/Order/Index.cshtml
+++ b/Purchasing.Web/Views/Order/Index.cshtml
@@ -43,6 +43,15 @@
                 event.preventDefault();
             });
         });
+
+//        $(function () {
+//            $(".workgroupDetails").click(function () {
+//                var temp = $(this);
+//                var orderId = temp.data("id");
+//                var role = temp.data("role");
+//                alert(orderId + role);
+//            });
+//        });
     </script>
 }
 
