added message while order form is being saved

--- a/Purchasing.Web/Views/Order/_OrderSaveDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderSaveDialog.cshtml
@@ -9,6 +9,7 @@
                 <p>
                     If you are preparing this order for another person in this workgroup you may optionally select them in the "Prepared For" list
                 </p>
+                <p class="highlight" id="order-save-message" style="display:none;">** Saving Order Form. Please Wait.... **</p>
             </div>
             <div>
                 <ul>
