custom events so fileupload saves to localstorage mult file uploads can now be associated and restored

--- a/Purchasing.Web/Views/Order/_CalculatorDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_CalculatorDialog.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="calculator-dialog" title="Price Calculator">
+﻿<div id="calculator-dialog" title="Price Calculator" style="display:none;">
     <form id="calculator-form">
         <section class="section-contents">
             <div class="section-text">
