--- a/Purchasing.Web/Views/Order/_OrderPreferences.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderPreferences.cshtml
@@ -12,7 +12,7 @@
             <p><strong id="shipping-warning" class="field-validation-error"></strong></p>
         </div>
 
-        <ul>
+        <ul id="order-preferences-list">
             <li>
 			    <div class="editor-label required">
 				    <label>Date Needed<span class="required">*</span>:</label>
