some navigational stuff.

--- a/Purchasing.Web/Views/Order/SavedOrderRequests.cshtml
+++ b/Purchasing.Web/Views/Order/SavedOrderRequests.cshtml
@@ -36,7 +36,7 @@
         {
             <tr>
                 <td>
-                    <a href="#" class="load" data-orderform="@a.FormData" data-orderfinancial="@a.AccountData" data-workgroup="@a.Workgroup.Id">Load</a>
+                    <a href="#" class="load button" data-orderform="@a.FormData" data-orderfinancial="@a.AccountData" data-workgroup="@a.Workgroup.Id">Load</a>
                 </td> 
                 <td>@a.Name</td> 
                 <td>@a.User.FullName</td> 
