--- a/Purchasing.Web/Views/Order/Index.cshtml
+++ b/Purchasing.Web/Views/Order/Index.cshtml
@@ -44,6 +44,24 @@
             });
         });
 
+        $(document).ready(function () {
+            $("#peepsDialog").dialog({
+                autoOpen: false,
+                height: 610,
+                width: 500,
+                modal: true,
+                buttons: {
+                    "Cancel": function () {
+                        $("#peepsUl").empty();
+                        $(this).dialog("close");
+                    }
+                }
+            });
+        });
+
+
+
+
         $(function () {
             $(".workgroupDetails").click(function () {
                 var temp = $(this);
@@ -51,8 +69,21 @@
                 var role = temp.data("role");
                 //alert(orderId + role);
                 var url = '@Url.Action("GetPeeps")';
+                var dialogList = $("#peepsUl");
+                dialogList.empty();
+                $("#peepsDialog").dialog("open");
+                $("#peepsLoaderId").toggle();
                 $.getJSON(url, { id: orderId, orderStatusCodeId: role }, function (result) {
-                  
+                    $("#peepsLoaderId").toggle();
+                    if (result == null || result.success == false) {
+                        alert("There was a problem getting the list of users.");
+                    } else {
+
+
+                        $(result.peeps).each(function () {
+                            dialogList.append("<li>" + this + "</li>");
+                        });
+                    }
                 });
             });
         });
