--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -262,6 +262,11 @@ img {
   max-width: 100%;
 }
 
+img.half {
+  width: 50%;
+  max-width: 50%;    
+}
+
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
