--- a/Purchasing.Web/Views/Order/_PeepsDialog.cshtml
+++ b/Purchasing.Web/Views/Order/_PeepsDialog.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="peepsDialog" title="Users who can act on this order" style="display: none;">
+﻿<div id="peepsDialog" title="Workgroup users who can act on this order" style="display: none;">
     <form id="peeps-form">
         <section class="section-contents">
             <div class="section-text">
