simple navigation to go home

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -267,6 +267,11 @@ img.half {
   max-width: 50%;    
 }
 
+nav li{
+    display: inline;
+    list-style-type: none;
+    padding-right: 20px;
+}
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
