--- a/Purchasing.Web/Views/Order/Review.cshtml
+++ b/Purchasing.Web/Views/Order/Review.cshtml
@@ -89,6 +89,7 @@
                 FileUploadUrl: "@Url.Action("UploadFile", "Order", new { orderId = Model.Order.Id })",
                 KfsStatusUrl: '@Url.Action("GetKfsStatus", "Order", new { id = Model.Order.Id})',
                 UserSearchUrl: "@Url.Action("SearchUsers", "DirectorySearch")",
+                PeepsUrl: '@Url.Action("GetPeeps")',
                 AntiForgeryToken: $('#forgery-token > input[name="__RequestVerificationToken"]').val(),
                 CanEdit: '@Model.CanEditOrder' === 'True',
                 CanCancel: '@Model.CanCancelOrder' === 'True',
