Saved Orders uses Prepared By instead of the current user.

--- a/Purchasing.Web/Views/Order/SavedOrderRequests.cshtml
+++ b/Purchasing.Web/Views/Order/SavedOrderRequests.cshtml
@@ -39,7 +39,7 @@
                     <a href="#" class="load button" data-orderform="@a.FormData" data-orderfinancial="@a.AccountData" data-workgroup="@a.Workgroup.Id">Load</a>
                 </td> 
                 <td>@a.Name</td> 
-                <td>@a.User.FullName</td> 
+                <td>@a.PreparedBy.FullName</td> 
                 <td>@a.DateCreated</td> 
                 <td>@a.LastUpdate</td> 
             </tr>
